Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-06-17 (SVN):
    * gl_rsurf.c (DrawTextureChains): Remove an extra semicolon from the
      end of a for construct. An obvious old typo found by clang-3.1.

2012-06-17 (SVN):
    * oslibs/windows/scitech/x86/libmglfx.def: commented out all of the
      opengl related exports to reduce the generated import library size

2012-06-16 (SVN):
    * Added missing GPL headers and copyright notes to all *.c, *.h and
      *.asm files.

2012-06-16 (SVN):
    * snd_mpg123.c: We need MPG123_API_VERSION at least 24, not 25. v24
      is the api version when mpg123 introduced handle-based custom I/O
      which we do rely on.

2012-06-15 (SVN):
    * quakefs.c: A lot of tidy-up: Moved Raven pak files check from
      FS_LoadPackFile() to new FS_CheckKnownPAKS() helper. Changed
      FS_AddGameDirectory() to be the only place where fs_gamedir,
      fs_userdir and fs_gamedir_nopath are set; FS_Gamedir() will still
      need further cleanup for that. Creating the fs_userdir directory
      is also done in FS_AddGameDirectory() now. FS_AddGameDirectory()
      now allocates the searchpath memory only on the zone instead of
      hunk. After checking for reserved gamedirs, FS_Gamedir() now calls
      FS_AddGameDirectory() to do the rest of the job.

2012-06-14 (SVN):
    * gamecode/hc/portals/world.hc: Commented out precache_file4 calls
      for non-existant maps/sheephunt.bsp and maps/mgallmon.bsp.

2012-06-14 (SVN):
    * updated the StandaloneMods extra patch after the FS changes.

2012-06-14 (SVN):
    * quakefs.c (processMapname): Clean-up and fix duplicate detection.

2012-06-14 (SVN):
    * sys_amiga.c (Sys_GetBasedir): Simply return "PROGDIR:"
    * utils/common/util_io.c (Q_getwd, _AMIGA): Likewise.

2012-06-14 (SVN):
    * Now that timidity works OK with Amiga paths, preferred it instead
      of wildmidi in AROS builds.

2012-06-14 (SVN):