@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2012-06-17 (SVN):
+    * snd_vorbis.c: Adjusted to support MorphOS.
+
+2012-06-17 (SVN):
     * gl_rsurf.c (DrawTextureChains): Remove an extra semicolon from the
       end of a for construct. An obvious old typo found by clang-3.1.
 
